# pokemon-gen5-initseed

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  todo.md  tsconfig.json  vite.config.ts  vitest.browser.config.ts  vitest.browser.workers.config.ts  vitest.config.ts
.github/: copilot-instructions.md
docs/: ACCESSIBILITY_GUIDE.md  GENERATION_PHASE3_4_PLAN.md  RESOLVER_MIGRATION_PLAN.md  index.html  phase2-3-resolution-plan.md  phase2-api.md  test-mt-seed-search.html
legacy-docs/: IMPLEMENTATION_STATUS.md  README.md
public/: test-integration.html
scripts/: build-wasm-optimized.js  fetch-gen5-species.js  migrate-encounter-display-names.js  run-webgpu-matrix.js  scrape-encounters.js
spec/: README.md  (+4 more)
wasm-pkg/: Cargo.toml
wasm-pkg/.cargo/: config.toml
wasm-pkg/src/: datetime_codes.rs  egg_boot_timing_search.rs  egg_iv.rs  egg_seed_enumerator.rs  encounter_calculator.rs  id_adjustment_search.rs  integrated_search.rs  iv_boot_timing_search.rs  lib.rs  mt19937.rs  mt19937_simd.rs  mt_seed_boot_timing_search.rs  mt_seed_search.rs  offset_calculator.rs  personality_rng.rs  pid_shiny_checker.rs  pokemon_generator.rs  search_common.rs  sha1.rs  sha1_simd.rs  utils.rs
wasm-pkg/src/search_common/: datetime.rs  hash.rs  message.rs  mod.rs  params.rs
wasm-pkg/src/tests/: datetime_codes_tests.rs  egg_iv_tests.rs  egg_seed_enumerator_tests.rs  integrated_generation_tests.rs  integrated_search_tests.rs  iv_boot_timing_performance_tests.rs  mod.rs  mt_seed_boot_timing_performance_tests.rs  sha1_simd_tests.rs  sha1_tests.rs
(+792 files in other folders)
