[package]
name = "wasm-pkg"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# Enable wasm-opt with required WASM features
wasm-opt = ["-O3", "--enable-simd", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.106"
byteorder = "1.5"
js-sys = "0.3"
chrono = { version = "0.4", features = ["wasm-bindgen"] }
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Performance optimization profile for WebAssembly
[profile.release]
incremental = false  # Disable for consistent LTO optimization
opt-level = 3        # Maximum speed optimization
lto = "fat"          # Full cross-crate LTO (enables embed-bitcode, disables overflow-checks/debug-assertions)
codegen-units = 1    # Single codegen unit for better optimization
panic = "abort"      # Smaller binary (no unwinding)
strip = true         # Remove debug symbols
